# docgen

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README_MCP.md
.agents/skills/add-page-type/: SKILL.md
.agents/skills/generate-site/: SKILL.md
.github/workflows/: daily-repo-status.lock.yml  daily-repo-status.md  pr-check.yaml  release.yml
src/: cli.rs  fetcher.rs  main.rs  model.rs
src/parser/: mod.rs  resolve.rs  schema.rs
src/renderer/: copy.rs  mod.rs  pages.rs  sitemap.rs
templates/: base.html  common_def.html  common_defs_index.html  group_index.html  resource.html  style.css  version_index.html
