[package]
name = "docgen"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tempfile = "3"

[dependencies]
clap      = { version = "4", features = ["derive", "env"] }
tokio     = { version = "1", features = ["full"] }
reqwest   = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
minijinja = "2"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
anyhow    = "1"
