[package]
name = "docgen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "docgen"
path = "src/main.rs"

[[bin]]
name = "mcp"
path = "src/bin/mcp.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
clap      = { version = "4", features = ["derive", "env"] }
tokio     = { version = "1", features = ["full"] }
reqwest   = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
minijinja = "2"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
anyhow    = "1"
rmcp      = { version = "1", features = ["server", "transport-streamable-http-server"] }
axum      = { version = "0.8" }
governor  = { version = "0.10" }
tracing   = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2      = "0.10"
hex       = "0.4"
